# idam-auth

./: .gitignore  main.py  pyproject.toml
idam/: IDAM.py  __init__.py  handler.py  idam.py  model.py
tests/: test_endpoints.py  test_idam.py  test_idam_prperty.py  test_token_handler.py  test_user_model.py  token.json
